Project-004-Phonebook-Application/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    CloudFormation Template for Phonebook Application. This template creates Application Load Balancer 
    with Auto Scaling Group of Amazon Linux 2 (XXXXXXXXXXXXX) EC2 Instances which host Python Flask Web Application. EC2 instances are placed within WebServerSecurityGroup which allows http (80) connections only from ALBSecurityGroup, and allows tcp(3306) connections only within itself. RDS DB instance is placed within WebServerSecurityGroup so that Database Server can communicate with Web Servers. Application Load Balancer is placed within ALBSecurityGroup which allows http (80) connections fro [...]
Parameters:
  LatestAmiId :
    Type : 'AWS::SSM::Parameter::Value'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  MYVPC:
    Description: VPC Id of your existing account 
    Type: AWS::EC2::VPC::Id

  Keyname:
    Description: Please enter your Keypair name 
    Type: AWS::EC2::KeyPair::KeyName

  Subnet:
    Description: Please select your Subnet that you want to use for subnet
    Type: AWS::EC2::Subnet::Id

Resources:
    ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Application Load Balancer
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref MyVPC

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Flask Web Server and SSH for getting into EC2
      SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
            - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           SourceSecurityGroupId: -!GetAtt ALBSecurityGroup.GroupId
      VpcId: -!Ref MyVPC 

  WebServerLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
        ImageId: -Ref LatestAmiId
        InstanceType: t2.micro
        KeyName: -Ref KeyName
        SecurityGroupIds:
          -GetAtt WebServerSecurityGroup.GroupId
        TagSpecifications:
          -  ResourceType: instancce
             Tags: 
              - Key: Name
                Value: -!Sub Web Server of ${AWS::StackName} Stack

        UserData: 
        Fn::Base64:
          !Sub
              - |
                #! /bin/bash
                yum update -y
                yum install python3 -y
                pip3 install flask
                pip3 install flask_mysql
                echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
                Token="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"
                FOLDER="https://raw.githubusercontent.com/ralbero/phonebookapp/main"
                curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"/templates/index.html
                curl -s --create-dirs -o "/home/ec2-user/templates/add-update.html" -L "$FOLDER"/templates/add-update.html
                curl -s --create-dirs -o "/home/ec2-user/templates/delete.html" -L "$FOLDER"/templates/delete.html
                curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"/phonebook-app.py
                python3 /home/ec2-user/app.py
              - MyDBURI: -!GetAtt MyDatabaseServer.Endpoint.Address


Outputs:
